force-app/main/default/objects/CBK_EmailMessage__e/CBK_EmailMessage__e.object-meta.xml
<CustomObject>
    <label>CBK EmailMessage</label>
    <pluralLabel>CBK EmailMessages</pluralLabel>
</CustomObject>