force-app/main/default/objects/CBK_EmailMessage__e/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>