force-app/main/default/objects/CBK_EmailMessage__e/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>30</length>
    <type>Text</type>
</CustomField>