force-app/main/default/objects/CBK_EmailMessage__e/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <label>Text Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>