force-app/main/default/objects/CBK_EmailMessage__e/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>ToAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>